--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,28 @@
-:root {
+html,
+body {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 10px;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  max-width: 98%;
+  color: azure;
+  background-color: rgb(25, 24, 24);
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
+} 
+
+* {
+  box-sizing: border-box;
+}
+
+
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -105,3 +129,4 @@ a {
     color-scheme: dark;
   }
 }
+ */
