--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -3,11 +3,13 @@
     border-radius: 4px;
     padding: 4px;
     margin-right: 30px;
+    width: 15rem;
 }
 
 .sidebar {
     display: flex;
     flex-direction: column; 
+    margin-top: 5rem;
    
     list-style: none;
     gap: 36px;
