--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,23 +1,23 @@
+
 :root {
   --border-radius: 12px;
 
   --main-font: rgb(255, 255, 255);
-  --background: 214, 219, 220;
+  --secondary-font: rgb(207, 207, 207);
+  --background: rgb(25, 24, 24);  
 }
 
 html,
 body {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  padding: 10px;
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  max-width: 98%;
+  font-family: 'Poppins', sans-serif;
+  max-width: 100%;
   color: var(--main-font);
-  background-image: url('star-wars-bg.jpg');
-/*   background-color: rgb(25, 24, 24);
- */}
+  background-image: url('../public/star-wars-bg.jpeg');
+  position: fixed;
+}
 
 a{
   color: inherit;
@@ -27,80 +27,3 @@ a{
 * {
   box-sizing: border-box;
 }
-
-
-
-/* :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
- */
