--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,12 +11,16 @@ html,
 body {
   display: flex;
   flex-direction: row;
+  align-items: flex-start;
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  max-width: 100%;
   color: var(--main-font);
   background-image: url('../public/star-wars-bg.jpeg');
-  position: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh;
 }
 
 a{
@@ -26,4 +30,10 @@ a{
 
 * {
   box-sizing: border-box;
+}
+
+section {
+  display: flex;
+  justify-content: flex-start;
+  width: 80%;
 }
