--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,16 @@
+.section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
 .container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    align-items: center;
+}
+
+.title {
+    padding: 20px;
 }
