--- a/styles/Planets.module.css
+++ b/styles/Planets.module.css
@@ -1,12 +1,25 @@
 .article {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
+    margin-top: 5%;
+  display: grid;
+  gap: 10px 50px;
+  padding: 20px;
+  border-color: rgb(255, 254, 240);
+  text-align: center;
+  float:left;
+  width: 350px;
+  height: 450px;
+  margin-right: 2%;
+  margin-left: 2%;
   }
   
-.title {
-    margin-right: 5rem;
-  }
+.person_name {
+  letter-spacing: 1px;
+  color:var(--dark-font);
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+  font-size: 35px;  -webkit-text-fill-color: var(--dark-font);
+  -webkit-text-stroke: 1px var(--highlight);
+  text-transform: uppercase;
+}
   
 .details {
     width: 100%;
