--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -2,7 +2,6 @@
   margin-right: 30px;
   background: rgb(0, 0, 0);
   background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.17738970588235292) 52%, rgba(0, 0, 0, 0.5611432072829132) 100%);
-  border-color: white;
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 13em;
@@ -19,6 +18,7 @@
   flex-grow: 999;
   flex-direction: column;
   margin-top: 2rem;
+  margin-bottom: 30%;
   font-size: 20px;
   font-weight: 800;
   color: var(--secondary-font);
