Finished: front design

--- a/styles/ListOf.module.css
+++ b/styles/ListOf.module.css
@@ -1,3 +1,16 @@
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 55px;
+  letter-spacing: 3px;
+  color:var(--light-font);
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+  text-transform: uppercase;
+  font-size: 2rem;
+}
+
+
 .article {
   margin-top: 5%;
   display: grid;
@@ -24,7 +37,7 @@
   vertical-align: middle;
 }
 
-.person_name {
+.name {
   letter-spacing: 1px;
   color:var(--dark-font);
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
