--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
   --main-font: rgb(255, 255, 255);
   --secondary-font: rgb(207, 207, 207);
-  --highlight: #dfd107;
+  --highlight: #f6e932;
   --dark-font: black;
   --background: rgb(25, 24, 24);
   --light-bg: rgba(245, 245, 245, 0.125);
